--- a/src/tesi/controller/Tesi.fxml
+++ b/src/tesi/controller/Tesi.fxml
@@ -21,11 +21,11 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.web.WebView?>
 
-<BorderPane prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tesi.controller.TesiController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tesi.controller.TesiController">
    <center>
       <ScrollPane BorderPane.alignment="CENTER">
          <content>
-            <AnchorPane prefWidth="1000.0" style="-fx-background-color: rgb(0,128,179);">
+            <AnchorPane style="-fx-background-color: rgb(0,128,179);">
                <children>
                   <VBox fx:id="boxLogo" layoutY="43.0">
                      <children>
@@ -188,17 +188,12 @@
                         <Insets left="5.0" />
                      </padding>
                   </RadioButton>
-                  <RadioButton fx:id="checkColonnineFast" layoutX="172.0" layoutY="300.0" mnemonicParsing="false" text="Presenza colonnine DC Fast Count*" textFill="WHITE">
+                  <RadioButton fx:id="checkColonnineFast" layoutX="172.0" layoutY="300.0" mnemonicParsing="false" text="Presenza colonnine DC Fast Count" textFill="WHITE">
                      <padding>
                         <Insets left="5.0" />
                      </padding>
                   </RadioButton>
-                  <Label layoutX="184.0" layoutY="774.0" text="*I prezzi potrebbero variare" textFill="WHITE">
-                     <font>
-                        <Font size="7.0" />
-                     </font>
-                  </Label>
-                  <WebView fx:id="webView" layoutX="181.0" layoutY="391.0" prefHeight="384.0" prefWidth="797.0" />
+                  <WebView fx:id="webView" layoutX="181.0" layoutY="391.0" prefHeight="405.0" prefWidth="797.0" />
                   <TextArea fx:id="txtResult" layoutX="430.0" layoutY="194.0" prefHeight="190.0" prefWidth="550.0">
                      <padding>
                         <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
