--- a/src/tesi/controller/PannelloSceltaAuto.fxml
+++ b/src/tesi/controller/PannelloSceltaAuto.fxml
@@ -8,13 +8,14 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-<?import javafx.scene.web.WebView?>
 
 <BorderPane prefHeight="339.0" prefWidth="602.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="tesi.controller.PannelloSceltaAutoController">
    <center>
@@ -22,11 +23,21 @@
          <children>
             <ToolBar prefHeight="40.0" prefWidth="200.0" style="-fx-background-color: maroon;">
                <items>
-                  <Text fill="WHITE" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="EV Manager - Scelta Auto" textAlignment="CENTER" wrappingWidth="347.630859375">
+                  <ImageView fx:id="btnHome" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#goBackHome" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../img/Home.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="WHITE" fontSmoothingType="LCD" strokeType="OUTSIDE" strokeWidth="0.0" text="EV Manager - Scelta Auto" textAlignment="CENTER" wrappingWidth="507.630859375">
                      <font>
                         <Font size="26.0" />
                      </font>
                   </Text>
+                  <ImageView fx:id="btnForward" fitHeight="25.0" fitWidth="25.0" onMouseClicked="#goForward" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../img/forward.png" />
+                     </image>
+                  </ImageView>
                </items>
             </ToolBar>
             <Pane prefHeight="200.0" prefWidth="602.0">
@@ -49,58 +60,58 @@
                                     </CheckBox>
                                  </children>
                               </VBox>
-                              <VBox prefHeight="94.0" prefWidth="85.0">
+                              <VBox prefHeight="94.0" prefWidth="86.0">
                                  <children>
                                     <Label text="Marca">
                                        <VBox.margin>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ChoiceBox fx:id="tendinaMarca" onMouseExited="#checkSelectedMarca" prefWidth="150.0">
+                                    <ChoiceBox fx:id="tendinaMarca" onMouseExited="#checkSelectedMarca" prefHeight="27.0" prefWidth="100.0">
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="10.0" />
+                                          <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                                        </VBox.margin>
                                     </ChoiceBox>
                                  </children>
                               </VBox>
-                              <VBox prefHeight="94.0" prefWidth="85.0">
+                              <VBox prefHeight="94.0" prefWidth="123.0">
                                  <children>
                                     <Label text="Modello">
                                        <VBox.margin>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ChoiceBox fx:id="tendinaModello" onMouseExited="#checkSelectedModello" prefWidth="150.0">
+                                    <ChoiceBox fx:id="tendinaModello" onMouseExited="#checkSelectedModello" prefHeight="27.0" prefWidth="125.0">
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="10.0" />
+                                          <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                                        </VBox.margin>
                                     </ChoiceBox>
                                  </children>
                               </VBox>
-                              <VBox prefHeight="94.0" prefWidth="85.0">
+                              <VBox prefHeight="94.0" prefWidth="93.0">
                                  <children>
                                     <Label text="Segmento">
                                        <VBox.margin>
                                           <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ChoiceBox fx:id="tendinaSegmento" prefWidth="150.0">
+                                    <ChoiceBox fx:id="tendinaSegmento" prefHeight="27.0" prefWidth="75.0">
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="10.0" />
+                                          <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                                        </VBox.margin>
                                     </ChoiceBox>
                                  </children>
                               </VBox>
-                              <VBox prefHeight="94.0" prefWidth="95.0">
+                              <VBox prefHeight="94.0" prefWidth="67.0">
                                  <children>
-                                    <Label text="Numero Posti">
+                                    <Label text="N° Posti">
                                        <VBox.margin>
                                           <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <ChoiceBox fx:id="tendinaNumPosti" prefWidth="150.0">
+                                    <ChoiceBox fx:id="tendinaNumPosti" prefHeight="27.0" prefWidth="50.0">
                                        <VBox.margin>
-                                          <Insets bottom="10.0" top="10.0" />
+                                          <Insets bottom="10.0" left="5.0" right="5.0" top="10.0" />
                                        </VBox.margin>
                                     </ChoiceBox>
                                  </children>
@@ -218,7 +229,7 @@
                         </Button>
                      </children>
                   </VBox>
-                  <TextArea fx:id="txtResult" prefHeight="98.0" prefWidth="261.0">
+                  <TextArea fx:id="txtResult" prefHeight="123.0" prefWidth="474.0">
                      <HBox.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </HBox.margin>
@@ -226,11 +237,6 @@
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                      </padding>
                   </TextArea>
-                  <WebView fx:id="webView" prefHeight="123.0" prefWidth="236.0">
-                     <HBox.margin>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                     </HBox.margin>
-                  </WebView>
                </children>
                <VBox.margin>
                   <Insets />
